Had issues with main header section not right on mobile

--- a/style.css
+++ b/style.css
@@ -738,13 +738,19 @@ footer,
 /* MENU LIST */
 
 .menu-container {
+  position: relative;
   width: 100%;
-  height: auto;
+  height: 1250px;
+  background-size: 42% 42%;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  border-radius: 7px;
   color: rgb(215, 190, 105);
 }
 
 .menu-info {
   width: 100%;
+  height: 100vh;
   text-align: center;
 }
 
